Chronological listing of changes. More detail is usually found in the Git commit messages
and/or the pull requests.

2013-08-17

* Fixed bug that caused matching to be aborted on first ignored non-object arg.


2013-07-30

* Improved value macro so it can take constant arguments and expressions. (Carl
  Lindberg)
* Fixed a bug that caused crashes when methods that require "special" struct returns
  were mocked in partial mocks. (Carl Lindberg)


2013-07-15

* Fixed several bugs regarding class method mocking in class hierarchies.


2013-07-03

* Fixed bug preventing the same class method to be expected more than once.


2013-07-02

* Can ignore non-object arguments on a per-invocation basis.
* Added constraint for any selector.


2013-06-19

* Constraints implement NSCopying for OS X 10.9 SDK compatibility.


2013-03-14

* Stubbing an object creation method now handles retain count correctly.
* Added support for forwardingTagetForSelector: (thanks to Jeff Watkins)


2013-03-12

* Added class method mocking capability to class mock objects
* Added implementation of isKindOfClass: to class mock objects


2013-02-20

* Allowing to set non-object pass-by-ref args (thanks to Glenn L. Austin)


2012-08-23

* Calling a previously expected method on a partial mock is no longer an error.


2012-01-23

* Avoiding deprecated method to convert to a C string (thanks to Kushal Pisavadia)


2011-11-03

* Recreated project from scratch with new conventions in Xcode 4.2 (thanks to Matt Di Pasquale)


2011-09-26 

* Arguments only need to be equal, don't have to have same class



Chronological listing of changes in the original Subversion code repository. If a particular 
SVN revision has no entry, that check-in did not involve any code or feature changes.
            
2011-02-15 (r74)

* Added feature to explicitly disable a partial mock
			
			
2011-01-28 (r71)

* Updated example to work with iOS 4.2.


2010-08-21 (r69)
